Added integration tests, and proper error handling
